Code refactor of the ServerInstance